--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.0",
     "moment": "^2.29.4",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
